# moc-agent

./: .env.runpod  .gitignore  pyproject.toml
core/: chunker.py  classifier.py  complaint_session.py  db.py  evaluate_retrieval.py  ingest.py  ingest_prod.py  inspect_pdf.py  qa_pipeline.py  rag_config.py  router.py
data/processed/: chunks_final_v2.json
lightrag_storage_prod/: graph_chunk_entity_relation.graphml  ingest_checkpoint.json  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json
tests/: golden_set.xlsx  test_complaint.py  test_qa.py
